Account unit tests

--- a/src/MoneyBox.App.Tests/MoneyBox.App.Tests.csproj
+++ b/src/MoneyBox.App.Tests/MoneyBox.App.Tests.csproj
@@ -18,4 +18,12 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Moneybox.App\Moneybox.App.csproj" />
+  </ItemGroup>
+
 </Project>
